--- a/parsers/typescript/package.json
+++ b/parsers/typescript/package.json
@@ -6,7 +6,7 @@
     "node": "20.18.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
     "@tsconfig/node20": "20.1.6",
