--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
       - run: go test ./...
         working-directory: parsers/go
 
-  test-ts:
+  test-typescript:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -32,5 +32,7 @@ jobs:
           node-version: 20.18.0
 
       - run: npm ci
+        working-directory: parsers/typescript
 
       - run: npm test
+        working-directory: parsers/typescript
